chnged search title
changed search title

--- a/new_list.html
+++ b/new_list.html
@@ -100,7 +100,7 @@
 					<div class="input-field col s12">
 						<i class="material-icons prefix">search</i>
 						<input type="text" id="autocomplete-input" class="autocomplete">
-						<label for="autocomplete-input">Add Grocery Items</label>
+						<label for="autocomplete-input">Search Items</label>
 					</div>
 				</div>
 			</div>
