--- a/new_list.html
+++ b/new_list.html
@@ -27,6 +27,10 @@
 		<button type = "button" class= "btn btn-default" onclick="location.href = 'main.html';">
 			<i class="fas fa-arrow-left" >Back</i>
 		</button>
+        
+        <button type = "button" class= "btn btn-default" onclick="location.href = 'index.html';">
+			<i class="fas fa-home" >HOME</i>
+		</button>
 	</head>
 		
 	
@@ -110,7 +114,6 @@
 			
 			var elems = document.querySelectorAll('.autocomplete');
 			var instances = M.Autocomplete.init(elems, options);
-
 			});
 		</script>
 		
