--- a/location.html
+++ b/location.html
@@ -31,7 +31,7 @@
     
     <body>
         <div class="center-align">
-            <img src="images/Enter_location.png" alt="banner" style="width: 300px; height: 55px; margin: 25px">
+            <img src="images/enter_location.png" alt="banner" style="width: 300px; height: 55px; margin: 25px">
         </div>
 		
 		
