--- a/map.html
+++ b/map.html
@@ -78,6 +78,7 @@
                     }
                 });
             }
+            localStorage.clear();
     </script>
         
     <script async defer
