--- a/main.html
+++ b/main.html
@@ -19,6 +19,10 @@
 	</head>
     
     <body>
+		<script>
+			localStorage.clear();
+			sessionStorage.clear();
+		</script>
         <div class="text-center" style="padding-bottom: 50px">
             <img src="images/Banner.png" alt="banner" style="width: 300px; height: 50px; margin: 25px">
         </div>
