--- a/index.html
+++ b/index.html
@@ -22,6 +22,20 @@
     
     <body>
 	
+		<script>
+			function check()/*function to check userid & password*/
+			{
+				
+				if(document.getElementById("email").value == "grocerylist@gmail.com" && document.getElementById("password").value == "myList")
+				{
+					window.open('main.html')/*opens the target page while Id & password matches*/
+				}
+				else
+				{
+					alert("Invalid Password or Username")/*displays error message*/
+				}
+			}
+		</script>
 
 		
         <div class="center-align">
@@ -36,7 +50,7 @@
 			<div class="row">
 				<form class="cmxform" id="formValidate" method="get" action="">
 					<div class="input-field col s12">
-						<input type="text">
+						<input type="text" id = "email">
 						<label for="cemail">Email</label>
 					</div>
 					<div class="input-field col s12">
@@ -44,7 +58,7 @@
 						<label for="password">Password</label>
 					</div>
 					<div class="center-align">
-						<a class="waves-effect waves-light btn" onclick="location.href = 'main.html';">Submit</a>
+						<a class="waves-effect waves-light btn" onclick="check()">Submit</a>
 					</div>
 				</form>
 			</div>
