--- a/results.html
+++ b/results.html
@@ -85,7 +85,11 @@
         
         document.getElementById("wholefoods").innerHTML = "$" + localStorage.getItem("total")* 3 + ".00";
 		
+		document.getElementById("distance3").innerHTML = localStorage.getItem("miles")+ " mi";
 		
+		document.getElementById("distance2").innerHTML = localStorage.getItem("miles")/2 + " mi";
+		
+		document.getElementById("distance1").innerHTML = localStorage.getItem("miles")/10+ " mi";
     </script>
     
 </html>
