--- a/detailed_view.html
+++ b/detailed_view.html
@@ -21,7 +21,7 @@
 			<i class="fas fa-arrow-left" >Back</i>
 		</button>
         
-        <button type = "button" class= "btn btn-default" onclick="location.href = 'index.html';">
+        <button type = "button" class= "btn btn-default" onclick="location.href = 'main.html';">
 			<i class="fas fa-home" >HOME</i>
 		</button>
         
