fixed creating the new tab
changed button from open in in new tab to changing current tab

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				
 				if(document.getElementById("email").value == "grocerylist@gmail.com" && document.getElementById("password").value == "myList")
 				{
-					window.open('main.html')/*opens the target page while Id & password matches*/
+					window.location.href = "main.html";/*opens the target page while Id & password matches*/
 				}
 				else
 				{
