--- a/location.html
+++ b/location.html
@@ -51,7 +51,7 @@
 			{
 					if(document.getElementById("miles").value > 0){
 						lstorage.setItem("miles",document.getElementById("miles").value)
-						window.open('results.html')/*opens the target page while Id & password matches*/
+						window.location.href = 'results.html' /*opens the target page while Id & password matches*/
 					}
 					
 					else{
