--- a/results2.html
+++ b/results2.html
@@ -95,5 +95,7 @@
 		window.onload = init;
 		
     </script>
-    <script src="JavaScript/tsorter.min.js" type="text/javascript"></script>
+    <script>
+		$.getScript("https://github.com/terrilldent/tsorter/blob/master/src/tsorter.js");
+		</script>
 </html>
