--- a/results.html
+++ b/results.html
@@ -50,17 +50,17 @@
             </tr>
             <tr>
                 <td id="sunshine"></td>
-                <td>Sunshine Market</td>
+                <td><a href="detailed_view.html">Select Sunshine Market </a></td>
                 <td id="distance1"></td>
             </tr>
             <tr>
                 <td id="ralphs"></td>
-                <td>Ralphs</td>
+                <td><a href="detailed_view1.html"> Select  Ralphs</a></td>
                 <td id="distance2"></td>
             </tr>
             <tr>
                 <td id="wholefoods"></td>
-                <td>Whole Foods</td>
+                <td><a href="detailed_view2.html">Select Whole Foods</a></td>
                 <td id = "distance3"></td>
 				
             </tr>
