--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     
     <body>
 	
+<!--
 		<script>
 			function check()/*function to check userid & password*/
 			{
@@ -36,32 +37,30 @@
 				}
 			}
 		</script>
+-->
 
 		
-        <div class="center-align">
+        <div class="center-align" style="padding-top: 100px;">
             <img src="images/Banner.png" alt="banner" style="width: 300px; height: 50px; margin: 25px">
         </div>
-		
-		<h2 class="center-align"> Login </h2>
-		
-		
+			
 		<div class="container">
 			
-			<div class="row">
+<!--			<div class="row">-->
 				<form class="cmxform" id="formValidate" method="get" action="">
-					<div class="input-field col s12">
+					<div class="input-field center-block" style="width: 500px;">
 						<input type="text" id = "email">
 						<label for="cemail">Email</label>
 					</div>
-					<div class="input-field col s12">
+					<div class="input-field center-block" style="width: 500px;">
 						<input id="password" type="password">
 						<label for="password">Password</label>
 					</div>
 					<div class="center-align">
-						<a class="waves-effect waves-light btn" onclick="check()">Submit</a>
+						<a class="waves-effect waves-light btn" onclick="location.href = 'main.html';">Log In</a>
 					</div>
 				</form>
-			</div>
+<!--			</div>-->
        </div>
         
     </body>
